1. Support for web added 2. sqlite dependency change to one supporting web too.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,5 +24,6 @@
   },
   "msgCancelAdoptionSuccess": "You've canceled you adoption. Sorry to hear that.",
   "alreadyAdopted": "Already\nAdopted",
-  "adoptedPets": "Adopted Pets"
+  "adoptedPets": "Adopted Pets",
+  "noAdoptedPets": "No Adopted Pets"
 }
